# aquanftwallet

./: .env  .eslintrc.js  README.md  deployaqua.sh  package-lock.json  package.json  test.js
aqua-services/: aquanftapdef.aqua
fluence-services/: .repl_history  Config.toml  build.sh
fluence-services/aqua_nft_wallet_api_service/: Cargo.toml  config.json
fluence-services/aqua_nft_wallet_api_service/src/: main.rs
fluence-services/artifacts/: aqua_nft_wallet_api_service.wasm  deploy.json
fluence-services/configs/: aqua_nft_wallet_api_service_cfg.json
public/: index.html
src/: App.vue
src/_aqua/: aquanftapdef.js  aquanftapdef.ts
src/data/: opensea.json
src/modals/: OpeanSeaNFTDetailsModal.vue
src/router/: index.js
src/services/: aquanftwallet.js
src/store/: index.js
src/views/: Home.vue  OpenseaCollectionView.vue
